xee-xslt-ast/src/snapshots/xee_xslt_ast__parse4__tests__simple_parse_variable_broken_xpath.snap
---
source: xee-xslt-ast/src/parse4.rs
expression: parser.parse(node)
---
Err(XPath(ExpectedFound(
  span: SimpleSpan(
    start: 39,
    end: 40,
    context: (),
  ),
)))
