xee-xslt-ast/src/snapshots/xee_xslt_ast__parse4__tests__simple_parse_variable_missing_required_name_attribute.snap
---
source: xee-xslt-ast/src/parse4.rs
expression: parser.parse(node)
---
Err(AttributeExpected(
  namespace: "",
  local: "name",
  span: Span(
    start: 1,
    end: 9,
  ),
))
